gccida/g0/print_exp
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:682:23: error: use of undeclared identifier 'unk_80AC55'
sep = ( const char *)&unk_80AC55; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:705:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:716:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:717:25: error: use of undeclared identifier 'off_80AC34'
st[2] = ( const char *)&off_80AC34; 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:719:22: error: use of undeclared identifier 'off_80AC34'
st[3] = ( _BYTE *)( &off_80AC34 + 2); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:724:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:736:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:742:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:751:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:756:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:761:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:766:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:771:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:775:25: error: use of undeclared identifier 'off_80AB40'
st[1] = ( const char *)&off_80AB40; 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:776:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:780:22: error: use of undeclared identifier 'off_80AB40'
st[1] = ( _BYTE *)( &off_80AB40 + 2); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:781:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:785:22: error: use of undeclared identifier 'off_80AB40'
st[1] = ( _BYTE *)( &off_80AB40 + 4); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/sched-vis.c:786:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_exp/src/obj/sched-vis.o] Error 1
